@@ -3763,3 +3763,4 @@ Start... early ages
 2012-07-02
 - aes/.cvsignore: Added missing gem_rsc.c gem_rsc.h. (VRI)
 - bios/screen.c: Refactored rez_changeable(). (VRI)
+- bios/screen.c: Refactored get_monitor_type(). (VRI)
